<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecieveDetails">

    <TextView
        android:id="@+id/work_2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/id_2"
        android:textSize="19sp"
        android:textStyle="bold"
        android:background="#00BCD4" />

    <TextView
        android:id="@+id/id_2"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date_2"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/work_2"
        android:textSize="14sp"
        android:textStyle="bold"
        android:background="#9E9E9E" />

    <TextView
        android:id="@+id/name_id"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/date_2"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="#9E9E9E" />

    <TextView
        android:id="@+id/address_id"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_id"
        android:textSize="21sp"
        android:textStyle="bold"
        android:background="#9E9E9E" />

    <TextView
        android:id="@+id/tax_id"
        android:layout_width="144dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/rate_id"
        android:text="TextView"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/grand_id"
        android:layout_width="144dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/discount_id"
        android:text="@string/Tax"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/rate_id"
        android:layout_width="144dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/address_id"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/discount_id"
        android:layout_width="144dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tax_id"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/flag_id"
        android:layout_width="144dp"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/total_id"
        android:text="TextView"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/end_id"
        android:layout_width="144dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/start_id"
        android:text="TextView"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/start_id"
        android:layout_width="144dp"
        android:layout_height="32dp"
        android:layout_alignStart="@+id/tax_id"
        android:layout_below="@+id/grand_id"
        android:text="TextView"
        android:layout_alignLeft="@+id/tax_id" />

    <TextView
        android:id="@+id/total_id"
        android:layout_width="144dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/end_id"
        android:text="TextView"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/address_id"
        android:text="@string/Rate"
        tools:layout_height="33dp"
        tools:layout_width="144dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/tax_id"
        android:text="@string/Tax"
        tools:layout_height="33dp"
        tools:layout_width="144dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tax_id"
        android:text="@string/Dis"
        tools:layout_height="33dp"
        tools:layout_width="144dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/grand_id"
        android:text="@string/grand"
        tools:layout_height="33dp"
        tools:layout_width="144dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/grand_id"
        android:text="@string/start"
        tools:layout_height="33dp"
        tools:layout_width="144dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/end_id"
        android:text="@string/end"
        tools:layout_height="33dp"
        tools:layout_width="144dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/end_id"
        android:text="@string/total"
        tools:layout_height="33dp"
        tools:layout_width="144dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="144dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/flag_id"
        android:text="@string/pay"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/flag_id"
        android:text="@string/req"
        android:textSize="16sp"
        tools:layout_height="33dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="195dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/flag_id"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:text="@string/add"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="192dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/editText"
        android:ems="10"
        android:inputType="textPersonName" />

</RelativeLayout>